modify css and typo

--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     
     <title>contact us</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <H1>Contct details</H1>
+    <H1>Contact details</H1>
     <p>DD Avenue Tallinn</p>
     <p>760837488</p>
     <p>gg@gmai.com</p>
