--- a/hobies.html
+++ b/hobies.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
    
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h3>hobies</h3>
+    <h3>hobbies</h3>
     <ol>
         <li>singing</li>
         <li>traveling</li>
-        <li>Learning</li>
+        <li>learning</li>
     </ol>
     
 </body>
