--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
   
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <table cellspacing = 20>
         <tr>
-            <td><img src="my-modified.png" alt="Profile Piicture"></td>
+            <td><img src="images/my-modified.png" alt="Profile Picture"></td>
             <td><h1>Gabriel Adoyi</h1>
                 <p><em>founder and cto of <strong><a href="https://www.enterprise.com/en/account.html#reward">Ehi Enterprise </a> </strong></em> </p>
                 <p>I am a software developer</p></td>
@@ -20,7 +21,7 @@
     <h3>Books and Motivation</h3>
     <ul>
         <li>How to invest in stock</li>
-        <li>how to be productive</li>
+        <li>How to be productive</li>
     </ul>
 
     <hr>
@@ -64,7 +65,7 @@
                         <td>⭐⭐⭐⭐</td>
                     </tr>
                     <tr>
-                        <td>Aws escentials</td>
+                        <td>Aws essentials</td>
                         <td>⭐⭐⭐ </td>
             
                     </tr>
